<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:id="@+id/linearlayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

    <TextView
        android:layout_width="412dp"
        android:layout_height="46dp"
        android:text="@string/Header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="101dp"
        android:layout_height="43dp"
        android:text="@string/Sub1"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="139dp" />

        <EditText
            android:id="@+id/ETSub1"
            android:layout_width="210dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:text="@string/Sub2"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="215dp" />

        <EditText
            android:id="@+id/ETSub2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            tools:layout_editor_absoluteX="170dp"
            tools:layout_editor_absoluteY="208dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="101dp"
        android:layout_height="35dp"
        android:text="@string/Sub3"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="291dp" />
    <EditText
        android:id="@+id/ETSub3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        tools:layout_editor_absoluteX="169dp"
        tools:layout_editor_absoluteY="278dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="101dp"
        android:layout_height="39dp"
        android:text="@string/Sub4"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="373dp" />


    <EditText
        android:id="@+id/ETSub4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        tools:layout_editor_absoluteX="170dp"
        tools:layout_editor_absoluteY="369dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="101dp"
        android:layout_height="37dp"
        android:text="@string/Sub5"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="444dp" />

    <EditText
        android:id="@+id/ETSub5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        tools:layout_editor_absoluteX="170dp"
        tools:layout_editor_absoluteY="433dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
    <Button
        android:id="@+id/Btn"
        android:layout_width="411dp"
        android:layout_height="83dp"
        android:text="@string/Btn"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="498dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Calculation"
            tools:layout_editor_absoluteX="37dp"
            tools:layout_editor_absoluteY="607dp" />

        <EditText
            android:id="@+id/ETCalculation"
            android:layout_width="262dp"
            android:layout_height="87dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            tools:layout_editor_absoluteX="120dp"
            tools:layout_editor_absoluteY="596dp" />
    </LinearLayout>


</LinearLayout>